<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_marginTop="-5dp"
        android:layout_height="250dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_top"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_user"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:textColor="#FFFFFF"
            android:text="@string/all_user_list"
            android:gravity="center"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_time"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:textColor="#896EFB"
            android:paddingTop="5dp"
            android:drawableLeft="@drawable/clock"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:layout_marginTop="170dp"
            android:text="@string/kamis_20_juni_2020"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_github"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_user" />
</RelativeLayout>